--- a/package.json
+++ b/package.json
@@ -24,13 +24,15 @@
     "@types/node": "10.12.10",
     "@types/prompts": "1.1.1",
     "@types/yargs": "12.0.1",
+    "babel-jest": "^23.6.0",
     "jest": "23.6.0",
     "jest-extended": "0.11.0",
-    "jest-junit": "5.2.0",
+    "jest-junit": "^5.2.0",
     "jest-raw-loader": "1.0.1",
     "pkg": "4.3.4",
     "rimraf": "2.6.2",
     "to-string-loader": "1.1.5",
+    "ts-jest": "^23.10.5",
     "ts-loader": "5.3.0",
     "tslint": "5.11.0",
     "tslint-loader": "3.5.4",
@@ -51,11 +53,49 @@
     "compile:watch": "webpack --watch",
     "start": "node .caches/cli-template.js",
     "clean": "rimraf bin .caches",
-    "build": "yarn compile:prod && pkg --out-path bin ."
+    "build": "yarn compile:prod && pkg --out-path bin .",
+    "test": "jest",
+    "test:coverage": "jest --coverage"
   },
   "pkg": {
     "assets": [
       "package.json"
     ]
+  },
+  "jest": {
+    "setupTestFrameworkScriptFile": "./test/jest.setup.js",
+    "preset": "ts-jest",
+    "testEnvironment": "node",
+    "testMatch": [
+      "**/src/**/__tests__/**/*.ts?(x)",
+      "**/src/**/?(*.)+(spec|test).ts?(x)"
+    ],
+    "collectCoverageFrom": [
+      "src/**/*.ts"
+    ],
+    "coverageReporters": [
+      "json",
+      "lcov",
+      "text-summary"
+    ],
+    "moduleFileExtensions": [
+      "js",
+      "ts"
+    ],
+    "transform": {
+      "^.+\\.js$": "babel-jest"
+    },
+    "reporters": [
+      "default",
+      [
+        "jest-junit",
+        {
+          "output": "coverage/reporter/junit/result.xml"
+        }
+      ]
+    ],
+    "globals": {
+      "COMPILED_DATE": 1543003978
+    }
   }
 }
