--- a/package.json
+++ b/package.json
@@ -1,88 +1,17 @@
 {
-  "name": "node-cli-template",
+  "name": "create-node-cli-app",
   "version": "1.0.0",
-  "description": "The template of node CLI command",
-  "main": "index.ts",
-  "bin": ".caches/cli-template.js",
-  "repository": " https://github.com/Template-generator/create-node-cli-app.git",
-  "author": "Kamontat Chantrachirathumrong <kamontat_c@hotmail.com>",
+  "description": "Create node cli app",
+  "main": "index.js",
+  "repository": "https://github.com/Template-generator/create-node-cli-app.git",
+  "author": "Kamontat Chantrachirathumrong <kamontat.c@hotmail.com>",
   "license": "MIT",
-  "private": false,
   "dependencies": {
-    "bluebird": "3.5.3",
-    "chalk": "2.4.1",
+    "fs-extra": "7.0.1",
     "listr": "0.14.3",
-    "prompts": "1.2.1",
-    "tracer": "0.9.6",
-    "yargs": "12.0.5"
-  },
-  "devDependencies": {
-    "@types/bluebird": "3.5.24",
-    "@types/jest": "23.3.9",
-    "@types/listr": "0.13.0",
-    "@types/mustache": "0.8.32",
-    "@types/node": "10.12.10",
-    "@types/prompts": "1.1.1",
-    "@types/yargs": "12.0.1",
-    "babel-jest": "^23.6.0",
-    "jest": "23.6.0",
-    "jest-extended": "0.11.0",
-    "jest-junit": "^5.2.0",
-    "jest-raw-loader": "1.0.1",
+    "mustache": "3.0.1",
     "pkg": "4.3.4",
-    "rimraf": "2.6.2",
-    "to-string-loader": "1.1.5",
-    "ts-jest": "^23.10.5",
-    "ts-loader": "5.3.0",
-    "tslint": "5.11.0",
-    "tslint-loader": "3.5.4",
-    "typedoc": "0.13.0",
-    "typedoc-plugin-external-module-name": "1.1.3",
-    "typedoc-plugin-internal-external": "1.0.10",
-    "typedoc-plugin-single-line-tags": "1.0.0",
-    "typescript": "3.1.6",
-    "uglify-js": "3.4.9",
-    "webpack": "4.26.0",
-    "webpack-bundle-analyzer": "3.0.3",
-    "webpack-cli": "3.1.2",
-    "webpack-node-externals": "1.7.2"
-  },
-  "scripts": {
-    "compile": "webpack",
-    "compile:prod": "webpack --mode=production",
-    "compile:watch": "webpack --watch",
-    "start": "node .caches/cli-template.js",
-    "clean": "rimraf bin .caches *.log log",
-    "clean:all": "rimraf bin .caches *.log log node_modules yarn.lock",
-    "build": "yarn compile:prod && pkg --out-path bin .",
-    "test": "jest",
-    "test:coverage": "jest --coverage"
-  },
-  "pkg": {
-    "assets": ["package.json"]
-  },
-  "jest": {
-    "setupTestFrameworkScriptFile": "./test/jest.setup.js",
-    "preset": "ts-jest",
-    "testEnvironment": "node",
-    "testMatch": ["**/src/**/__tests__/**/*.ts?(x)", "**/src/**/?(*.)+(spec|test).ts?(x)"],
-    "collectCoverageFrom": ["src/**/*.ts"],
-    "coverageReporters": ["json", "lcov", "text-summary"],
-    "moduleFileExtensions": ["js", "ts"],
-    "transform": {
-      "^.+\\.js$": "babel-jest"
-    },
-    "reporters": [
-      "default",
-      [
-        "jest-junit",
-        {
-          "output": "coverage/reporter/junit/result.xml"
-        }
-      ]
-    ],
-    "globals": {
-      "COMPILED_DATE": 1543003978
-    }
+    "prompts": "1.2.1",
+    "yargs": "12.0.5"
   }
 }
