--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "create-node-cli-app",
-  "version": "1.0.6",
+  "version": "1.1.0",
   "description": "Create node cli app",
   "main": "index.js",
   "bin": {
@@ -14,7 +14,7 @@
     "node": ">=8.0.0"
   },
   "dependencies": {
-    "execa": "^1.0.0",
+    "execa": "1.0.0",
     "fs-extra": "7.0.1",
     "listr": "0.14.3",
     "mustache": "3.0.1",
