[fix]: passing url in generator url

--- a/fixtures/package.json
+++ b/fixtures/package.json
@@ -11,7 +11,7 @@
   "generator": {
     "command": "{{app.name}}",
     "version": "{{app.version}}",
-    "repo": "{{app.repo_url}}",
+    "repo": "{{{app.repo_url}}}",
     "date": "{{app.when}}"
   },
   "dependencies": {
